# DigitalCalendar

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_android.ps1  build_android_release.ps1  check_android_16kb.ps1  create_android_keystore.ps1  install_android.ps1  package_windows.ps1  run.ps1
.github/: aqt-settings.ini
.github/workflows/: build.yml
android/: CMakeLists.txt
android/package/: AndroidManifest.xml  build.gradle
android/package/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/src/: AndroidCalendarWidget.cpp  AndroidCalendarWidget.h  main.cpp
desktop/src/: AppIcon.h  CalendarWidget.cpp  CalendarWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
